# SQLite-Levenshtein

./: .gitignore  Makefile  Makefile-old  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac
src/: Makefile.am  Makefile.in  levenshtein.c
tests/: README  levenshtein-test.sql
